# ActivityTool

./: CMakeLists.txt  main.c
engine/: engine.h  install_persistence.c  install_program.c  program_loop.c
input/: get_windows_idle_time.c  input.h  key_press.c
ui/: draw_ellipse.c  get_scale_factor.c  ui.h
